# vynmindmap

./: .gitignore  DESIGN.md  HowToAdvHpp.md  HowToAdvHpp.vmm  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.claude/skills/vynmm-mindmap/: SKILL.md
.github/workflows/: ci.yml  release.yml
app/src/: App.svelte  app.css
app/src/lib/: ConfirmHost.svelte  Icon.svelte  Inspector.svelte  MindMapView.svelte  OutlinePanel.svelte  confirm.svelte.ts  layout.ts  loadVmm.ts  platform.ts  recents.ts
docs/: vmm-markdown-format.md
examples/: minimal.vmm  rich.vmm  structures.vmm
mcp/: server.ts
scripts/: make-examples.ts  make-icon.ts  setup.ps1  setup.sh
src/: cli.ts  index.ts  markdown.ts  model.ts  types.ts  version.ts  vmm.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: layout.test.ts  markdown.test.ts  mcp.test.ts  model.test.ts  roundtrip.test.ts  version.test.ts
