[package]
name = "vynmindmap"
version = "0.1.1"
description = "VynMindMap mind-mapping app"
authors = ["VynMindMap"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vynmindmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
